# komodo

./: .buildinfo  .gitignore  .mypy.ini  .travis.yml  CONTRIBUTING.md  README.md  SECURITY.md  basic-usage.html  boost165.sh  bootstrap.sh  commands.html  dev-requirements.txt  development.html  enable.csh.in  enable.in  enable.m4  genindex.html  index.html  installation.html  komodo.data.html  komodo.html  komodo.py  komodo.symlink.html  komodo.symlink.suggester.html  license.html  lint.py  objects.inv  py-modindex.html  pyproject.toml  python-mk.sh  repository.yml  requirements.txt  search.html  searchindex.js  setup-py.sh  setup-wheel.sh  setup.cfg  setup.py  shell.py
.doctrees/: basic-usage.doctree  commands.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  komodo.data.doctree  komodo.doctree  komodo.symlink.doctree  komodo.symlink.suggester.doctree  license.doctree
.github/workflows/: docs.yml  style.yml  test.yml
_sources/: basic-usage.md.txt  komodo.data.rst.txt  komodo.rst.txt  komodo.symlink.rst.txt  komodo.symlink.suggester.rst.txt
ci/: build_lib.sh  func_def.sh  release-matrix.yml  release-py3x.yml  repository.yml  test_import_lib.py
ci/travis/: locations.yml  release-py27.yml  release-py37.yml  release-py38.yml  repository.yml  test_import_lib.py
docs/: basic-usage.md  commands.md  conf.py  development.md  index.rst  installation.md  komodo.data.rst  komodo.rst  komodo.symlink.suggester.rst
docs/_static/: custom.css
examples/: repository.yml  stable.yml
examples/releases/: ecl.yml  unstable.yml
jenkins/: build-release-pipeline  build-release-pipeline.groovy  build-release.sh  ci_helper.sh  link.sh
jenkins/matrix-build/: Jenkinsfile  Jenkinsfile-bleeding
jenkins/spe1/: run_spe1.sh  spe1.ert
jenkins/symlink/suggester/: Jenkinsfile
jenkins/test/pull_request/: Jenkinsfile  extract_version.py  komodo.sh
komodo/: __init__.py  ask_for_tags.py  build.py  check_conflicts.py  check_unused_package.py  check_up_to_date_pypi.py  cleanup.py  cli.py  deployed.py  elf.py  extract_dep_graph.py  fetch.py  insert_proposals.py  komodo_error.py  link.py  lint.py  lint_maturity.py  lint_package_status.py  lint_symlink_config.py  lint_upgrade_proposals.py  local.py  maintainer.py  matrix.py  package_version.py  post_messages.py  prettier.py  pypi_dependencies.py  release_cleanup.py  release_transpiler.py  reverse_dep_graph.py  shebang.py  shell.py  shim.py  show_version.py  snyk_reporting.py  switch.py  versions.py  yaml_file_type.py  yaml_file_types.py
komodo/data/: __init__.py  activator_switch.csh.tmpl  activator_switch.tmpl  boost165.sh  build__gdal.sh  build__madagascar.sh  build__ncdu.sh  build__opm-common.sh  build__p7zip.sh  build__pyqt5-sip.sh  build__pyqt5.sh  build__pyside-dev.sh  build__python-virtualenv.sh  build__python3.8-venv.sh  build__qt-5.13.1-src.sh  build__subprocess32.sh  build__tar.sh  build__ts.sh  build__webviz.sh  build__xkbcommon.sh  build__xtgeo.sh  enable.csh.in  enable.csh.jinja2  enable.in  enable.jinja2  ert-statoil.sh  everest-models.sh  jenkins.sh  local.csh.tmpl  local.tmpl  python-mk.sh  set_permissions.sh  setup-py.sh
komodo/symlink/: create_links.py  sanity_check.py  types.py
komodo/symlink/suggester/: cli.py  configuration.py  release.py
releases/: unstable.yml
tests/: __init__.py  _mock_get_pypi_requirements.py  conftest.py  test_build.py  test_check_unused_package.py  test_cleanup.py  test_cli.py  test_data.py  test_elf.py  test_enable_scipts.py  test_enable_scripts.py  test_extract_dep_graph.py  test_fetch.py  test_insert_proposals.py  test_komodo.py  test_link.py  test_link_io_structure.py  test_link_name.py  test_lint.py  test_lint_maturity.py  test_lint_package_status.py  test_lint_upgrade_proposals.py  test_local.py  test_matrix.py  test_non_deployed.py  test_package_version.py  test_post_messages.py  test_prettier.py  test_pypi_dependencies.py  test_release_cleanup.py  test_release_transpiler.py  test_release_transpiler_argument_types.py  test_reverse_dep_graph.py  test_sanity_check.py  test_shebang_fixer.py  test_shim.py  test_show_version.py  test_snyk_reporting.py  test_suggester.py  test_switch.py  (+3 more)
tests/data/: links.json  links_full.json  test_release_matrix.yml  test_repository.yml  test_repository_missing.yml
tests/data/cli/: locations.yml  minimal_release.yml  minimal_repository.yml  nominal_release.yml  nominal_repository.yml  nominal_repository.yml.jinja2  test_python_builtin.sh
tests/data/cli/hackgit/.git-hack/: HEAD  index
tests/data/cli/hackgit/.git-hack/logs/refs/heads/: test-hash
tests/data/cli/hackgit/.git-hack/refs/heads/: test-hash
tests/data/cli/hackres/: test_build_script.sh
tests/data/test_messages/: motd_db.yml
tests/data/test_messages/messages/: message1
tests/data/test_messages/scripts/: script1
tests/data/test_releases/: 2020.01.a1-py27.yml  2020.01.a1-py36.yml  2020.01.a1-py38.yml  wrong_ext.yaml
tests/input/: dummy_package.yml  duplicate_repository.yml  inconsistent_config.yml  pretty_release.yml  pretty_repository.yml  test_custom_coordinate_release.yml  ugly_release.yml  ugly_repository.yml
vars/: komodo.groovy  testKomodo.groovy  xUnitTest.groovy
